# api-quota-tracker

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  gui.py  kimi_cli_probe.py  open_gui.bat  open_kimi_cli_probe.bat  plan_probe.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: examples.md  quickstart.md  security.md
docs/examples/: sample-report.txt
